fiwed layout bug

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -49,10 +49,7 @@ ul {
 .container {
   max-width: 970px;
   @media (min-width: 768px) {
-    width: auto;
-  }
-  @media (max-width: 520px) {
-    padding: 0;
+    width: 100%;
   }
 }
 header {
@@ -430,4 +427,3 @@ footer {
 }
 
 @import 'partials/loader-animated.less';
-
